Added a group role security